# sistema_bancario_bovedas

./: CMakeLists.txt  README.md  ayuda_compilar.txt  comoCompilar.txt
src/: main.cpp
src/core/: SistemaBancario.cpp  SistemaBancario.h
src/core/entidades/: Activo.cpp  Activo.h  ActivoTransaccion.cpp  ActivoTransaccion.h  Boveda.cpp  Boveda.h  Denominacion.cpp  Denominacion.h  DineroSaldo.cpp  DineroSaldo.h  DineroTransaccion.cpp  DineroTransaccion.h  EntidadBancaria.cpp  EntidadBancaria.h  Plaza.cpp  Plaza.h  Saldo.cpp  Saldo.h  TipoActivo.cpp  TipoActivo.h  TipoMoneda.cpp  TipoMoneda.h  TipoOperacion.cpp  TipoOperacion.h  Transaccion.cpp  Transaccion.h  Transportador.cpp  Transportador.h  Valoracion.cpp  Valoracion.h
src/exceptions/: ExcepcionOperacion.h  ExcepcionesActivos.h  ExcepcionesBase.h  ExcepcionesEntidades.h  ExcepcionesGenerales.h  ExcepcionesMoneda.h  ExcepcionesTransacciones.h
src/ui/: MainWindow.cpp  mainwindow.h
